--- a/app.yaml
+++ b/app.yaml
@@ -2,5 +2,11 @@ runtime: php55
 api_version: 1
 
 handlers:
+- url: /css/*
+  static_dir: css
+  
+- url: /images/*
+  static_dir: images
+  
 - url: /.*
   script: index.php
